Fixed Community ressources spacing

--- a/less/etalab-dataset.less
+++ b/less/etalab-dataset.less
@@ -568,6 +568,7 @@ aside {
         color: #dfdfdf;
         font-size: 13px;
         line-height: 1.4em;
+        margin-top: -3px;
     }
 }
 
